edited markdown cells between code chunks

--- a/NYT.ipynb
+++ b/NYT.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# New York Times Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want to query the New York Times articles on the Rohingya crisis to build a corpus of documents. To do this, we will be interacting with the Times' own [API](https://developer.nytimes.com/apis)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1016,6 +1030,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the [New York Times API](https://developer.nytimes.com/faq#a11) has a call limit of 10 queries per minute, we need to sleep for 6 seconds between each call to avoid hitting the per minute rate limit."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -1045,7 +1066,15 @@
     }
    ],
    "source": [
+    "# check all pages are added\n",
     "len(urls)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each element of `urls` is actually a list of up to 10 URLS, as we see here."
    ]
   },
   {
@@ -1078,6 +1107,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to make `urls` easier to work with, we flatten it, and see that the list now has 1059 individual URLs in it."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -1107,6 +1143,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We make a dataframe out of the list, and write the data to a csv, in case we want to use it another time outside of a jupyter notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
@@ -1117,31 +1160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1059, 1)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nyt_urls_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "nyt_urls_df.to_csv('nyt_urls.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `%store` magic method allows us to use this variable in other jupyter notebooks."
    ]
   },
   {
@@ -1160,6 +1190,13 @@
    "source": [
     "%store nyt_urls_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
