--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aside from the New York Times corpus, we also want to try building a corpus from a variety of online news sources, to debias our work from how the Times does their reporting. We chose to work with [NewsAPI](newsapi.org), which allowed us to perform limited querying for free."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -70,6 +77,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Many of the stories pulled by this request are from different branches of the same news outlet (e.g. Reuters, Reuters UK, Reuters India, etc). In an effort to deduplicate our data, we removed rows with exactly matching titles."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -77,161 +91,6 @@
    "source": [
     "myanmardf = pd.json_normalize(myanmarjson, record_path = ['articles'])\n",
     "myanmardf = myanmardf.loc[~myanmardf.title.duplicated(),]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>author</th>\n",
-       "      <th>title</th>\n",
-       "      <th>description</th>\n",
-       "      <th>url</th>\n",
-       "      <th>urlToImage</th>\n",
-       "      <th>publishedAt</th>\n",
-       "      <th>content</th>\n",
-       "      <th>source.id</th>\n",
-       "      <th>source.name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>None</td>\n",
-       "      <td>Global virtual aid conference to be held for R...</td>\n",
-       "      <td>Global virtual aid conference to be held for R...</td>\n",
-       "      <td>https://uk.reuters.com/article/uk-myanmar-rohi...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2020-10-15T07:39:00Z</td>\n",
-       "      <td>FILE PHOTO: Rohingyas living in Malaysia prote...</td>\n",
-       "      <td>reuters</td>\n",
-       "      <td>Reuters</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Reuters Staff</td>\n",
-       "      <td>Myanmar election app goes offline, has been cr...</td>\n",
-       "      <td>A smartphone app produced for Myanmar’s Nov. 8...</td>\n",
-       "      <td>https://in.reuters.com/article/myanmar-electio...</td>\n",
-       "      <td>https://static.reuters.com/resources/r/?m=02&amp;d...</td>\n",
-       "      <td>2020-10-02T15:46:00Z</td>\n",
-       "      <td>By Reuters Staff\\r\\nYANGON (Reuters) - A smart...</td>\n",
-       "      <td>reuters</td>\n",
-       "      <td>Reuters</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Reuters Staff</td>\n",
-       "      <td>Global virtual aid conference to be held for R...</td>\n",
-       "      <td>A global virtual international donor conferenc...</td>\n",
-       "      <td>https://www.reuters.com/article/myanmar-rohing...</td>\n",
-       "      <td>https://static.reuters.com/resources/r/?m=02&amp;d...</td>\n",
-       "      <td>2020-10-15T07:43:00Z</td>\n",
-       "      <td>By Reuters Staff\\r\\n(Reuters) - A global virtu...</td>\n",
-       "      <td>reuters</td>\n",
-       "      <td>Reuters</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Reuters Staff</td>\n",
-       "      <td>Global virtual aid conference to be held for R...</td>\n",
-       "      <td>A global virtual international donor conferenc...</td>\n",
-       "      <td>https://in.reuters.com/article/myanmar-rohingy...</td>\n",
-       "      <td>https://static.reuters.com/resources/r/?m=02&amp;d...</td>\n",
-       "      <td>2020-10-15T08:05:00Z</td>\n",
-       "      <td>By Reuters Staff\\r\\n(Reuters) - A global virtu...</td>\n",
-       "      <td>reuters</td>\n",
-       "      <td>Reuters</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Rozanna Latiff, A. Ananthalakshmi</td>\n",
-       "      <td>Anti-migrant sentiment fanned on Facebook in M...</td>\n",
-       "      <td>As coronavirus infections surged in Malaysia t...</td>\n",
-       "      <td>https://www.reuters.com/article/us-facebook-ma...</td>\n",
-       "      <td>https://static.reuters.com/resources/r/?m=02&amp;d...</td>\n",
-       "      <td>2020-10-14T03:20:00Z</td>\n",
-       "      <td>KUALA LUMPUR (Reuters) - As coronavirus infect...</td>\n",
-       "      <td>reuters</td>\n",
-       "      <td>Reuters</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              author  \\\n",
-       "0                               None   \n",
-       "1                      Reuters Staff   \n",
-       "2                      Reuters Staff   \n",
-       "3                      Reuters Staff   \n",
-       "4  Rozanna Latiff, A. Ananthalakshmi   \n",
-       "\n",
-       "                                               title  \\\n",
-       "0  Global virtual aid conference to be held for R...   \n",
-       "1  Myanmar election app goes offline, has been cr...   \n",
-       "2  Global virtual aid conference to be held for R...   \n",
-       "3  Global virtual aid conference to be held for R...   \n",
-       "4  Anti-migrant sentiment fanned on Facebook in M...   \n",
-       "\n",
-       "                                         description  \\\n",
-       "0  Global virtual aid conference to be held for R...   \n",
-       "1  A smartphone app produced for Myanmar’s Nov. 8...   \n",
-       "2  A global virtual international donor conferenc...   \n",
-       "3  A global virtual international donor conferenc...   \n",
-       "4  As coronavirus infections surged in Malaysia t...   \n",
-       "\n",
-       "                                                 url  \\\n",
-       "0  https://uk.reuters.com/article/uk-myanmar-rohi...   \n",
-       "1  https://in.reuters.com/article/myanmar-electio...   \n",
-       "2  https://www.reuters.com/article/myanmar-rohing...   \n",
-       "3  https://in.reuters.com/article/myanmar-rohingy...   \n",
-       "4  https://www.reuters.com/article/us-facebook-ma...   \n",
-       "\n",
-       "                                          urlToImage           publishedAt  \\\n",
-       "0                                               None  2020-10-15T07:39:00Z   \n",
-       "1  https://static.reuters.com/resources/r/?m=02&d...  2020-10-02T15:46:00Z   \n",
-       "2  https://static.reuters.com/resources/r/?m=02&d...  2020-10-15T07:43:00Z   \n",
-       "3  https://static.reuters.com/resources/r/?m=02&d...  2020-10-15T08:05:00Z   \n",
-       "4  https://static.reuters.com/resources/r/?m=02&d...  2020-10-14T03:20:00Z   \n",
-       "\n",
-       "                                             content source.id source.name  \n",
-       "0  FILE PHOTO: Rohingyas living in Malaysia prote...   reuters     Reuters  \n",
-       "1  By Reuters Staff\\r\\nYANGON (Reuters) - A smart...   reuters     Reuters  \n",
-       "2  By Reuters Staff\\r\\n(Reuters) - A global virtu...   reuters     Reuters  \n",
-       "3  By Reuters Staff\\r\\n(Reuters) - A global virtu...   reuters     Reuters  \n",
-       "4  KUALA LUMPUR (Reuters) - As coronavirus infect...   reuters     Reuters  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "myanmardf.head()"
    ]
   },
   {
@@ -263,6 +122,13 @@
    ],
    "source": [
     "len(myanmar_urls)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the [newspaper3k](https://newspaper.readthedocs.io/en/latest/) package, we extract the full text of each article with an `extractArticles` method. Within the method, we attempt once more to deduplicate data, checking to make sure that the text isn't already stored in the articles dict. Additionally, when building this method, we noticed that some of the URLs returned by the query were missing a / or other punctuation, and hence would raise an exception. To overcome this, we instruct the method to continue past any broken links."
    ]
   },
   {
@@ -304,6 +170,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After creating a dataframe of our article texts, we use regular expressions to remove punctuation and then cast all words to lower case, for use later."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -311,6 +184,13 @@
    "source": [
     "myanmar_texts['text']= myanmar_texts['text'].map(lambda x: re.sub('[,\\.!?]', '', x))\n",
     "myanmar_texts['text'] = myanmar_texts['text'].map(lambda x: x.lower())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once again, we store the variable for later use in another notebook."
    ]
   },
   {
@@ -328,6 +208,13 @@
    ],
    "source": [
     "%store myanmar_texts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we import the `nyt_urls_df` dataframe from the `NYT.ipynb` notebook, and perform the same steps as above."
    ]
   },
   {
@@ -406,78 +293,6 @@
    "source": [
     "nyt_texts['text']= nyt_texts['text'].map(lambda x: re.sub('[,\\.!?]', '', x))\n",
     "nyt_texts['text'] = nyt_texts['text'].map(lambda x: x.lower())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>https://www.nytimes.com/2020/10/17/world/asia/rohingya-child-brides.html</th>\n",
-       "      <td>bangkok — haresa counted the days by the moon ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>https://www.nytimes.com/2020/10/12/world/asia/myanmar-thailand-gods-army-htoo-twins.html</th>\n",
-       "      <td>as they escape to farther and colder climates ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>https://www.nytimes.com/2020/09/22/world/asia/un-general-assembly-live-updates.html</th>\n",
-       "      <td>us-china brawl sharpens on the global stage th...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>https://www.nytimes.com/2020/09/18/opinion/facebook-democracy.html</th>\n",
-       "      <td>for years myanmar’s military used facebook to ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>https://www.nytimes.com/2020/09/15/world/United-Nations-General-Assembly.html</th>\n",
-       "      <td>worldwide contagion the worst economic crisis ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                                                 text\n",
-       "https://www.nytimes.com/2020/10/17/world/asia/r...  bangkok — haresa counted the days by the moon ...\n",
-       "https://www.nytimes.com/2020/10/12/world/asia/m...  as they escape to farther and colder climates ...\n",
-       "https://www.nytimes.com/2020/09/22/world/asia/u...  us-china brawl sharpens on the global stage th...\n",
-       "https://www.nytimes.com/2020/09/18/opinion/face...  for years myanmar’s military used facebook to ...\n",
-       "https://www.nytimes.com/2020/09/15/world/United...  worldwide contagion the worst economic crisis ..."
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nyt_texts.head()"
    ]
   },
   {
